# pipo-onset-juceapp

./: .gitignore  .gitmodules  CMakeLists.txt
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
